--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,74 @@
-<!doctype html>
-<title>Shopping List</title>
-<meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- JS -->
-<script src="//code.jquery.com/jquery-2.1.0.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel='stylesheet' href="./main.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/readable/bootstrap.min.css">
+</head>
+
+<body>
+    <h1>Simple API Capstone</h1>
+
+    <form class="add-item">
+        <input id='input-value' type="text" placeholder='Add your task'>
+        <button class="btn btn-primary">Add</button>
+    </form>
+
+    <ul class="item-list"></ul>
+
+</body>
+<script id="item-list-template" type="text/x-handlebars-template">
+    <ul class="item-list">
+        <div class='list-header row'>
+            <div class='header-name col-md-6'>Task</div>
+            <div class='header-edit col-md-2'>Edit</div>
+            <div class='header-completed col-md-2'>Complete</div>
+            <div class='header-deleted col-md-2'>Delete</div>
+        </div>
+        {{#each items}}
+        <li data-id="{{ id }}{{ _id }}">
+
+            <div class="display row">
+
+                <div class="name col-md-6 {{#if complete}}completed{{/if}}">
+                    {{name}}
+                </div>
+                <div class='edit col-md-2'>
+
+                    <a href="#" class="edit-item {{#if complete}}hidden{{/if}}" aria-label="Edit item">
+                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                    </a>
+
+                </div>
+                <div class='completed col-md-2 button'>
+                    <a href="#" class="complete-item {{#if complete}}hidden{{/if}}" aria-label="Complete item">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                    </a>
+
+                </div>
+                <div class="delete col-md-2">
+                    <a href="#" class="delete-item" aria-label="Delete item">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </a>
+                </div>
+
+            </div>
+            <form class="edit-item-form" hidden>
+                <input type="text" name="edit-item-input" title="Edit item">
+                <button type="submit" class="visually-hidden">Edit item</button>
+            </form>
+
+        </li>
+        {{/each}}
+    </ul>
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.js"></script>
+<script src="libs/jquery/dist/jquery.min.js"></script>
 <script src="main.js"></script>
 
-<div id='container'>
-      <div>
-          <form>
-              <input type="text" name=""/>
-              <input type="submit" value="Add To list"/>
-          </form>
-      </div>
-      <div id='list-div'>
-          <ul id='list'></ul>
-      </div>
-</div>
+</html>
